--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     
     
     <section class="bio" style="text-align:center; padding: 20px; background-color: #f8f8f8; border-bottom: 1px solid #ccc;">
-  <p>Bienvenue sur <strong>L.MARKET</strong><img src="/20250618_191502.png" width="15" height="15" alt="certification"></p>
+  <p>Bienvenu(e) sur <strong>L.MARKET</strong><img src="/20250618_191502.png" width="15" height="15" alt="certification"></p>
       <p>Découvrez des articles de toutes sortes <strong>livres e-books, chaussures, accesoires, phones, habillements...</strong><br><a style="color:green;"><strong>Gratuits</strong></a> & <a style="color: rgb(0, 0, 255);"><strong>Payants</strong></a>
  </p>
 </section>
