--- a/Payant.html
+++ b/Payant.html
@@ -82,6 +82,42 @@
 </div><br>
     <!-- LES NOUVELES ARTICLES DOIVENT ETRE COLLES ICI -->
     
+    <!-- ARTICLE PAYANT -->
+    <!--mocassin -->
+<div class="product" 
+  data-category="chaussures" 
+  data-name="chassure homme weston" 
+  data-id="040"
+  data-class="chaussure mocassin"
+  data-phone="+243988400578"
+  data-prince="35$">
+    <a class="subtext">Nom de l'article:</a><strong>Mocassin J.M weston</strong>   
+  <p>Mocassin J.M Weston original tous les couleurs  <br> Pointure: 37-45'
+        <br><strong><a style="color:red;">LIVRAISON 5000FC</a></strong></p>
+  
+  <br><img src="IMG_20250628_160502-COLLAGE.jpg" alt="mocassin">
+  <p class="subtext">Lorsque vous appuyer sur ACHETER, vous allez êtres diriger sur Whatsapp pour finaliser l'achat.</p>
+  <div class="actions">
+    <div class="btn btn-prix">35$</div>
+    <button class="btn btn-whatsapp whatsapp-order-btn" 
+            data-product="Mocassin J.M weston" 
+            data-price="35$"
+            data-phone="+243988400578">
+      ACHETER
+    </button>
+  </div>
+  
+  <strong><p>Partagez l'article</p></strong>
+ 
+    <div class="share-buttons">           
+        <button class="share-btn" data-share="whatsapp">Whatsapp</button>
+      <button class="share-btn" data-share="facebook">facebook</button>
+      <button class="share-btn" data-share="twitter">twitter</button>
+      <button class="copy-link-btn" data-id="040">Copier le lien</button>
+    </div>
+       </div>
+  
+  
   <!-- ARTICLE PAYANT -->
     <!-- Adidas campus -->
 <div class="product" 
@@ -117,6 +153,8 @@
     </div>
        </div>
   
+  
+
    <!-- ARTICLE PAYANT -->
     <!-- Adidas campus -->
 <div class="product" 
@@ -149,6 +187,41 @@
       <button class="share-btn" data-share="facebook">facebook</button>
       <button class="share-btn" data-share="twitter">twitter</button>      
       <button class="copy-link-btn" data-id="005">Copier le lien</button>
+    </div>
+       </div>
+  
+    <!-- ARTICLE PAYANT -->
+    <!--costume -->
+<div class="product" 
+  data-category="vetements" 
+  data-name="veste croisée" 
+  data-id="042"
+  data-class="veste croisée"
+  data-phone="+243988400578"
+  data-prince="70$">
+    <a class="subtext">Nom de l'article:</a><strong>Veste croisé</strong>   
+  <p>Veste croisé toute les tailles et tous les couleurs
+        <br><strong><a style="color:green;">LIVRAISON GRATUITE</a></strong></p>
+  
+  <br><img src="IMG_20250628_162931-COLLAGE.jpg" alt="veste croise">
+  <p class="subtext">Lorsque vous appuyer sur ACHETER, vous allez êtres diriger sur Whatsapp pour finaliser l'achat.</p>
+  <div class="actions">
+    <div class="btn btn-prix">70$</div>
+    <button class="btn btn-whatsapp whatsapp-order-btn" 
+            data-product="Veste croisé" 
+            data-price="70$"
+            data-phone="+243988400578">
+      ACHETER
+    </button>
+  </div>
+  
+  <strong><p>Partagez l'article</p></strong>
+ 
+    <div class="share-buttons">           
+        <button class="share-btn" data-share="whatsapp">Whatsapp</button>
+      <button class="share-btn" data-share="facebook">facebook</button>
+      <button class="share-btn" data-share="twitter">twitter</button>
+      <button class="copy-link-btn" data-id="042">Copier le lien</button>
     </div>
        </div>
   
@@ -255,6 +328,42 @@
     </div>
        </div>
   
+  
+    <!-- ARTICLE PAYANT -->
+    <!--mocassin -->
+<div class="product" 
+  data-category="chaussures" 
+  data-name="Adidas campus" 
+  data-id="041"
+  data-class="chaussure mocassin"
+  data-phone="+243988400578"
+  data-prince="35$">
+    <a class="subtext">Nom de l'article:</a><strong>Mocassin J.M weston</strong>   
+  <p>Mocassin J.M Weston original tous les couleurs  <br> Pointure: 37-45'
+        <br><strong><a style="color:red;">LIVRAISON 5000FC</a></strong></p>
+  
+  <br><img src="IMG_20250628_160435-COLLAGE.jpg" alt="mocassin">
+  <p class="subtext">Lorsque vous appuyer sur ACHETER, vous allez êtres diriger sur Whatsapp pour finaliser l'achat.</p>
+  <div class="actions">
+    <div class="btn btn-prix">35$</div>
+    <button class="btn btn-whatsapp whatsapp-order-btn" 
+            data-product="Mocassin J.M weston" 
+            data-price="35$"
+            data-phone="+243988400578">
+      ACHETER
+    </button>
+  </div>
+  
+  <strong><p>Partagez l'article</p></strong>
+ 
+    <div class="share-buttons">           
+        <button class="share-btn" data-share="whatsapp">Whatsapp</button>
+      <button class="share-btn" data-share="facebook">facebook</button>
+      <button class="share-btn" data-share="twitter">twitter</button>
+      <button class="copy-link-btn" data-id="041">Copier le lien</button>
+    </div>
+       </div>
+
   <!-- ARTICLE PAYANT -->
     <!-- Chaînette couple -->
 <div class="product" 
