--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       <a href="https://app-lmarket.netlify.app" style="text-decoration: none; color: white;"><span><strong>Télecharger l'application</strong></span></a>
 </div>
        <button id="menuButton" class="menu-button">
-            <span class="menu-icon">  <img src="20250627_203055.png" width="50" height="30" alt="menu" ></span> <!-- Icône de menu -->
+            <span class="menu-icon">  <img src="/20250627_203055.png" width="50" height="30" alt="menu" ></span> <!-- Icône de menu -->
       </button>
  </header>     
     <div id="menuOverlay" class="menu-overlay">
