--- a/Payant.html
+++ b/Payant.html
@@ -71,7 +71,11 @@
 </div>
     <div class="search-suggestions hidden" id="search-suggestions"></div>
     
-  
+  <!-- Photo promotion -->
+    <div class="product">
+    <img src="20250629_214905.png" alt="image promo lipanda">
+    </div>
+    
     <div class="dernier">
     <h2>Articles payants</h2>
     </div>
