--- a/Payant.html
+++ b/Payant.html
@@ -86,6 +86,399 @@
 </div><br>
     <!-- LES NOUVELES ARTICLES DOIVENT ETRE COLLES ICI -->
     
+   <!-- ARTICLE PAYANT -->
+    <!--mocassin -->
+<div class="product" 
+  data-category="chaussures" 
+  data-name="chassure homme weston" 
+  data-id="044"
+  data-class="chaussure mocassin"
+  data-phone="+243988400578"
+  data-prince="99$">
+    <a class="subtext">Nom de l'article:</a><strong>Mocassin J.M weston</strong>   
+  <p>Mocassin J.M Weston italien original tous les couleurs  <br> Pointure: 37-46'
+        <br><strong><a style="color:red;">LIVRAISON 5000FC</a></strong></p>
+  
+  <br><img src="IMG_20250629_195842-COLLAGE.jpg" alt="mocassin">
+  <p class="subtext">Lorsque vous appuyer sur ACHETER, vous allez êtres diriger sur Whatsapp pour finaliser l'achat.</p>
+  <div class="actions">
+    <div class="btn btn-prix">99$</div>
+    <button class="btn btn-whatsapp whatsapp-order-btn" 
+            data-product="Mocassin J.M weston" 
+            data-price="99$"
+            data-phone="+243988400578">
+      ACHETER
+    </button>
+  </div>
+  
+  <strong><p>Partagez l'article</p></strong>
+ 
+    <div class="share-buttons">           
+        <button class="share-btn" data-share="whatsapp">Whatsapp</button>
+      <button class="share-btn" data-share="facebook">facebook</button>
+      <button class="share-btn" data-share="twitter">twitter</button>
+      <button class="copy-link-btn" data-id="044">Copier le lien</button>
+    </div>
+       </div>
+  
+    <!-- ARTICLE PAYANT -->
+    <!-- Puma swag -->
+<div class="product" 
+  data-category="baskets" 
+  data-name="Puma swag"
+  data-id="053"
+  data-class="Puma swag"
+  data-phone="+243988400578"
+  data-prince="18$">
+    <a class="subtext">Nom de l'article:</a><strong>Puma swag.</strong>   
+  <p>Soyez plus stylé avec cette paire de Puma swag. Disponible Tous les couleurs.  <br> Pointure: 35-46'
+        <br><strong><a style="color:red;">LIVRAISON 5000FC</a></strong></p>
+  
+  <br><img src="20250628_155140.jpg" alt="image Puma swag">
+  <p class="subtext">Lorsque vous appuyer sur ACHETER, vous allez êtres diriger sur Whatsapp pour finaliser l'achat.</p>
+  <div class="actions">
+    <div class="btn btn-prix">18$</div>
+    <button class="btn btn-whatsapp whatsapp-order-btn" 
+            data-product="Puma swag" 
+            data-price="18$"
+            data-phone="+243988400578">
+      ACHETER
+    </button>
+  </div>
+  
+  <strong><p>Partagez l'article</p></strong>
+ 
+    <div class="share-buttons">           
+        <button class="share-btn" data-share="whatsapp">Whatsapp</button>
+       <button class="share-btn" data-share="facebook">facebook</button>
+      <button class="share-btn" data-share="twitter">twitter</button>
+      <button class="copy-link-btn" data-id="053">Copier le lien</button>
+       </div>
+       </div>
+  
+  
+  <!-- ARTICLE PAYANT -->
+    <!-- Converse all star -->
+<div class="product" 
+  data-category="baskets" 
+  data-name="Converse all star"
+  data-id="052"
+  data-class="Converse all star"
+  data-phone="+243988400578"
+  data-prince="11$">
+    <a class="subtext">Nom de l'article:</a><strong>Converse all star.</strong>   
+  <p>Soyez plus stylé avec cette paire de Converse all star. Disponible Tous les couleurs.  <br> Pointure: 35-44'
+        <br><strong><a style="color:red;">LIVRAISON 5000FC</a></strong></p>
+  
+  <br><img src="20250628_154951.jpg" alt="image Nike Jordan one">
+  <p class="subtext">Lorsque vous appuyer sur ACHETER, vous allez êtres diriger sur Whatsapp pour finaliser l'achat.</p>
+  <div class="actions">
+    <div class="btn btn-prix">11$</div>
+    <button class="btn btn-whatsapp whatsapp-order-btn" 
+            data-product="Converse all star" 
+            data-price="11$"
+            data-phone="+243988400578">
+      ACHETER
+    </button>
+  </div>
+  
+  <strong><p>Partagez l'article</p></strong>
+ 
+    <div class="share-buttons">           
+        <button class="share-btn" data-share="whatsapp">Whatsapp</button>
+       <button class="share-btn" data-share="facebook">facebook</button>
+      <button class="share-btn" data-share="twitter">twitter</button>
+      <button class="copy-link-btn" data-id="052">Copier le lien</button>
+       </div>
+       </div>
+  
+  
+    <!-- ARTICLE PAYANT -->
+    <!-- Nike Jordan one -->
+<div class="product" 
+  data-category="baskets" 
+  data-name=" Nike Jordan one" 
+  data-id="051"
+  data-class="Basket Nike Jordan one"
+  data-phone="+243988400578"
+  data-prince="18$">
+    <a class="subtext">Nom de l'article:</a><strong>Nike Jordan one.</strong>   
+  <p>Soyez plus stylé avec cette paire de Nike Jordan one. Disponible Tous les couleurs.  <br> Pointure: 34-46'
+        <br><strong><a style="color:red;">LIVRAISON 5000FC</a></strong></p>
+  
+  <br><img src="IMG_20250629_184249-COLLAGE.jpg" alt="image Nike Jordan one">
+  <p class="subtext">Lorsque vous appuyer sur ACHETER, vous allez êtres diriger sur Whatsapp pour finaliser l'achat.</p>
+  <div class="actions">
+    <div class="btn btn-prix">18$</div>
+    <button class="btn btn-whatsapp whatsapp-order-btn" 
+            data-product="Nike Jordan one" 
+            data-price="18$"
+            data-phone="+243988400578">
+      ACHETER
+    </button>
+  </div>
+  
+  <strong><p>Partagez l'article</p></strong>
+ 
+    <div class="share-buttons">           
+        <button class="share-btn" data-share="whatsapp">Whatsapp</button>
+       <button class="share-btn" data-share="facebook">facebook</button>
+      <button class="share-btn" data-share="twitter">twitter</button>
+      <button class="copy-link-btn" data-id="051">Copier le lien</button>
+       </div>
+       </div>
+  
+    <!-- ARTICLE PAYANT -->
+    <!-- Nike Jordan one -->
+<div class="product" 
+  data-category="baskets" 
+  data-name=" Nike Jordan one" 
+  data-id="050"
+  data-class="Basket Nike Jordan one"
+  data-phone="+243988400578"
+  data-prince="18$">
+    <a class="subtext">Nom de l'article:</a><strong>Nike Jordan one.</strong>   
+  <p>Soyez plus stylé avec cette paire de Nike Jordan one. Disponible Tous les couleurs.  <br> Pointure: 34-46'
+        <br><strong><a style="color:red;">LIVRAISON 5000FC</a></strong></p>
+  
+  <br><img src="IMG_20250629_184219-COLLAGE.jpg" alt="image Nike Jordan one">
+  <p class="subtext">Lorsque vous appuyer sur ACHETER, vous allez êtres diriger sur Whatsapp pour finaliser l'achat.</p>
+  <div class="actions">
+    <div class="btn btn-prix">18$</div>
+    <button class="btn btn-whatsapp whatsapp-order-btn" 
+            data-product="Nike Jordan one" 
+            data-price="18$"
+            data-phone="+243988400578">
+      ACHETER
+    </button>
+  </div>
+  
+  <strong><p>Partagez l'article</p></strong>
+ 
+    <div class="share-buttons">           
+        <button class="share-btn" data-share="whatsapp">Whatsapp</button>
+       <button class="share-btn" data-share="facebook">facebook</button>
+      <button class="share-btn" data-share="twitter">twitter</button>
+      <button class="copy-link-btn" data-id="050">Copier le lien</button>
+       </div>
+       </div>
+  
+   <!-- ARTICLE PAYANT -->
+    <!-- Nike Jordan one retro -->
+<div class="product" 
+  data-category="baskets" 
+  data-name=" Nike Jordan one retro" 
+  data-id="049"
+  data-class="Basket Nike Jordan one retro"
+  data-phone="+243988400578"
+  data-prince="18$">
+    <a class="subtext">Nom de l'article:</a><strong>Nike Jordan one retro</strong>   
+  <p>Soyez plus stylé avec cette paire de Nike Jordan one retro. Disponible Tous les couleurs.  <br> Pointure: 34-46'
+        <br><strong><a style="color:red;">LIVRAISON 5000FC</a></strong></p>
+  
+  <br><img src="IMG_20250629_184526-COLLAGE.jpg" alt="image Nike Jordan one retro">
+  <p class="subtext">Lorsque vous appuyer sur ACHETER, vous allez êtres diriger sur Whatsapp pour finaliser l'achat.</p>
+  <div class="actions">
+    <div class="btn btn-prix">18$</div>
+    <button class="btn btn-whatsapp whatsapp-order-btn" 
+            data-product="Nike Jordan one retro" 
+            data-price="18$"
+            data-phone="+243988400578">
+      ACHETER
+    </button>
+  </div>
+  
+  <strong><p>Partagez l'article</p></strong>
+ 
+    <div class="share-buttons">           
+        <button class="share-btn" data-share="whatsapp">Whatsapp</button>
+       <button class="share-btn" data-share="facebook">facebook</button>
+      <button class="share-btn" data-share="twitter">twitter</button>
+      <button class="copy-link-btn" data-id="049">Copier le lien</button>
+       </div>
+       </div>
+  
+  
+  
+   <!-- ARTICLE PAYANT -->
+    <!-- Nike Traviscott -->
+<div class="product" 
+  data-category="baskets" 
+  data-name="Nike Traviscott" 
+  data-id="048"
+  data-class="Basket Nike Traviscott"
+  data-phone="+243988400578"
+  data-prince="19$">
+    <a class="subtext">Nom de l'article:</a><strong>Nike Traviscott</strong>   
+  <p>Soyez plus stylé avec cette paire de Traviscott. Disponible Tous les couleurs.  <br> Pointure: 34-46'
+        <br><strong><a style="color:red;">LIVRAISON 5000FC</a></strong></p>
+  
+  <br><img src="20250628_154741.jpg" alt="image Nike TScott">
+  <p class="subtext">Lorsque vous appuyer sur ACHETER, vous allez êtres diriger sur Whatsapp pour finaliser l'achat.</p>
+  <div class="actions">
+    <div class="btn btn-prix">19$</div>
+    <button class="btn btn-whatsapp whatsapp-order-btn" 
+            data-product="Nike Traviscott" 
+            data-price="19$"
+            data-phone="+243988400578">
+      ACHETER
+    </button>
+  </div>
+  
+  <strong><p>Partagez l'article</p></strong>
+ 
+    <div class="share-buttons">           
+        <button class="share-btn" data-share="whatsapp">Whatsapp</button>
+       <button class="share-btn" data-share="facebook">facebook</button>
+      <button class="share-btn" data-share="twitter">twitter</button>
+      <button class="copy-link-btn" data-id="048">Copier le lien</button>
+       </div>
+       </div>
+  
+    <!-- ARTICLE PAYANT -->
+    <!-- Nike Traviscott -->
+<div class="product" 
+  data-category="baskets" 
+  data-name="Nike Traviscott" 
+  data-id="047"
+  data-class="Basket Nike Traviscott"
+  data-phone="+243988400578"
+  data-prince="19$">
+    <a class="subtext">Nom de l'article:</a><strong>Nike Traviscott</strong>   
+  <p>Soyez plus stylé avec cette paire de Traviscott. Disponible Tous les couleurs.  <br> Pointure: 34-46'
+        <br><strong><a style="color:red;">LIVRAISON 5000FC</a></strong></p>
+  
+  <br><img src="IMG_20250629_184333-COLLAGE.jpg" alt="image Nike TScott">
+  <p class="subtext">Lorsque vous appuyer sur ACHETER, vous allez êtres diriger sur Whatsapp pour finaliser l'achat.</p>
+  <div class="actions">
+    <div class="btn btn-prix">19$</div>
+    <button class="btn btn-whatsapp whatsapp-order-btn" 
+            data-product="Nike Traviscott" 
+            data-price="19$"
+            data-phone="+243988400578">
+      ACHETER
+    </button>
+  </div>
+  
+  <strong><p>Partagez l'article</p></strong>
+ 
+    <div class="share-buttons">           
+        <button class="share-btn" data-share="whatsapp">Whatsapp</button>
+       <button class="share-btn" data-share="facebook">facebook</button>
+      <button class="share-btn" data-share="twitter">twitter</button>
+      <button class="copy-link-btn" data-id="047">Copier le lien</button>
+       </div>
+       </div>
+  
+  
+  <!-- ARTICLE PAYANT -->
+    <!-- Veste one bouton -->
+<div class="product" 
+  data-category="vetements" 
+  data-name="veste one bouton" 
+  data-id="046"
+  data-class="veste one bouton"
+  data-phone="+243988400578"
+  data-prince="75$">
+    <a class="subtext">Nom de l'article:</a><strong>veste one bouton trois pièces</strong>   
+  <p>Soyez plus elegant avec cette Veste one bouton trois pièces
+        <br><strong><a style="color:red;">LIVRAISON 5000FC</a></strong></p>
+  
+  <br><img src="IMG_20250628_162945-COLLAGE.jpg" alt="image Nike SB">
+  <p class="subtext">Lorsque vous appuyer sur ACHETER, vous allez êtres diriger sur Whatsapp pour finaliser l'achat.</p>
+  <div class="actions">
+    <div class="btn btn-prix">75$</div>
+    <button class="btn btn-whatsapp whatsapp-order-btn" 
+            data-product="veste one bouton trois pièces" 
+            data-price="75$"
+            data-phone="+243988400578">
+      ACHETER
+    </button>
+  </div>
+  
+  <strong><p>Partagez l'article</p></strong>
+ 
+    <div class="share-buttons">           
+        <button class="share-btn" data-share="whatsapp">Whatsapp</button>
+       <button class="share-btn" data-share="facebook">facebook</button>
+      <button class="share-btn" data-share="twitter">twitter</button>
+      <button class="copy-link-btn" data-id="046">Copier le lien</button>
+       </div>
+       </div>
+  
+    
+    <!-- ARTICLE PAYANT -->
+    <!-- Nike SB -->
+<div class="product" 
+  data-category="baskets" 
+  data-name="Nike S/B" 
+  data-id="045"
+  data-class="baskets"
+  data-phone="+243988400578"
+  data-prince="19$">
+    <a class="subtext">Nom de l'article:</a><strong>Nike S/B</strong>   
+  <p>Nike S/B original Tous les couleurs.  <br> Pointure: 34-46'
+        <br><strong><a style="color:red;">LIVRAISON 5000FC</a></strong></p>
+  
+  <br><img src="1751105872394.jpg" alt="image Nike SB">
+  <p class="subtext">Lorsque vous appuyer sur ACHETER, vous allez êtres diriger sur Whatsapp pour finaliser l'achat.</p>
+  <div class="actions">
+    <div class="btn btn-prix">19$</div>
+    <button class="btn btn-whatsapp whatsapp-order-btn" 
+            data-product="Nike S/B" 
+            data-price="19$"
+            data-phone="+243988400578">
+      ACHETER
+    </button>
+  </div>
+  
+  <strong><p>Partagez l'article</p></strong>
+ 
+    <div class="share-buttons">           
+        <button class="share-btn" data-share="whatsapp">Whatsapp</button>
+       <button class="share-btn" data-share="facebook">facebook</button>
+      <button class="share-btn" data-share="twitter">twitter</button>
+      <button class="copy-link-btn" data-id="045">Copier le lien</button>
+       </div>
+       </div>
+  
+  
+    <!-- ARTICLE PAYANT -->
+    <!-- Nike SB -->
+<div class="product" 
+  data-category="baskets" 
+  data-name="Nike S/B" 
+  data-id="044"
+  data-class="baskets"
+  data-phone="+243988400578"
+  data-prince="19$">
+    <a class="subtext">Nom de l'article:</a><strong>Nike S/B</strong>   
+  <p>Nike S/B original Tous les couleurs.  <br> Pointure: 34-46'
+        <br><strong><a style="color:red;">LIVRAISON 5000FC</a></strong></p>
+  
+  <br><img src="20250628_154642.jpg" alt="image Nike SB">
+  <p class="subtext">Lorsque vous appuyer sur ACHETER, vous allez êtres diriger sur Whatsapp pour finaliser l'achat.</p>
+  <div class="actions">
+    <div class="btn btn-prix">19$</div>
+    <button class="btn btn-whatsapp whatsapp-order-btn" 
+            data-product="Nike S/B" 
+            data-price="19$"
+            data-phone="+243988400578">
+      ACHETER
+    </button>
+  </div>
+  
+  <strong><p>Partagez l'article</p></strong>
+ 
+    <div class="share-buttons">           
+        <button class="share-btn" data-share="whatsapp">Whatsapp</button>
+       <button class="share-btn" data-share="facebook">facebook</button>
+      <button class="share-btn" data-share="twitter">twitter</button>
+      <button class="copy-link-btn" data-id="044">Copier le lien</button>
+       </div>
+       </div>
+  
+  
     <!-- ARTICLE PAYANT -->
     <!--mocassin -->
 <div class="product" 
@@ -94,7 +487,7 @@
   data-id="040"
   data-class="chaussure mocassin"
   data-phone="+243988400578"
-  data-prince="35$">
+  data-prince="40$">
     <a class="subtext">Nom de l'article:</a><strong>Mocassin J.M weston</strong>   
   <p>Mocassin J.M Weston original tous les couleurs  <br> Pointure: 37-45'
         <br><strong><a style="color:red;">LIVRAISON 5000FC</a></strong></p>
@@ -102,10 +495,10 @@
   <br><img src="IMG_20250628_160502-COLLAGE.jpg" alt="mocassin">
   <p class="subtext">Lorsque vous appuyer sur ACHETER, vous allez êtres diriger sur Whatsapp pour finaliser l'achat.</p>
   <div class="actions">
-    <div class="btn btn-prix">35$</div>
+    <div class="btn btn-prix">40$</div>
     <button class="btn btn-whatsapp whatsapp-order-btn" 
             data-product="Mocassin J.M weston" 
-            data-price="35$"
+            data-price="40$"
             data-phone="+243988400578">
       ACHETER
     </button>
@@ -341,7 +734,7 @@
   data-id="041"
   data-class="chaussure mocassin"
   data-phone="+243988400578"
-  data-prince="35$">
+  data-prince="40$">
     <a class="subtext">Nom de l'article:</a><strong>Mocassin J.M weston</strong>   
   <p>Mocassin J.M Weston original tous les couleurs  <br> Pointure: 37-45'
         <br><strong><a style="color:red;">LIVRAISON 5000FC</a></strong></p>
@@ -349,10 +742,10 @@
   <br><img src="IMG_20250628_160435-COLLAGE.jpg" alt="mocassin">
   <p class="subtext">Lorsque vous appuyer sur ACHETER, vous allez êtres diriger sur Whatsapp pour finaliser l'achat.</p>
   <div class="actions">
-    <div class="btn btn-prix">35$</div>
+    <div class="btn btn-prix">40$</div>
     <button class="btn btn-whatsapp whatsapp-order-btn" 
             data-product="Mocassin J.M weston" 
-            data-price="35$"
+            data-price="40$"
             data-phone="+243988400578">
       ACHETER
     </button>
