--- a/Gratuit.html
+++ b/Gratuit.html
@@ -23,8 +23,8 @@
     <h1><img src="20250613_003237.png" width="200" height="60" alt="Logo du site"></h1>
     
         <button id="menuButton" class="menu-button">
-            <span class="menu-icon">  <img src="20250627_203055.png" width="50" height="30" alt="menu" ></span> <!-- Icône de menu -->
-      </button>
+         <span class="menu-icon"><a class="xback-to-top-btn">☰ </a></span> <!-- Icône de menu -->
+        </button>
  </header>     
     <div id="menuOverlay" class="menu-overlay">
         <div class="menu-content">
@@ -61,7 +61,7 @@
     
 
     <!-- BARRE DE RECHERCHE --> 
-    <div class="search-container">
+    <br>  <div class="search-container">
   <input type="text" id="search-input" placeholder="Rechercher un produit...">
   <button id="search-button">
     <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor">
