--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
       <a href="https://app-lmarket.netlify.app" style="text-decoration: none; color: white;"><span><strong>Télecharger l'application</strong></span></a>
 </div>
        <button id="menuButton" class="menu-button">
-            <span class="menu-icon">  <img src="20250627_203055.png" width="50" height="30" alt="menu" ></span> <!-- Icône de menu -->
-      </button>
+            <span class="menu-icon"><a class="xback-to-top-btn">☰ </a></span> <!-- Icône de menu -->
+       </button>
  </header>     
     <div id="menuOverlay" class="menu-overlay">
         <div class="menu-content">
@@ -87,7 +87,7 @@
   <div class="content">
     
     
-    <section class="bio" style="text-align:center; padding: 20px; background-color: #f8f8f8; border-bottom: 1px solid #ccc;">
+    <br>  <section class="bio" style="text-align:center; padding: 20px; background-color: #f8f8f8; border-bottom: 1px solid #ccc;">
   <p>Bienvenue sur <strong>L.MARKET</strong><img src="/20250618_191502.png" width="15" height="15" alt="certification"></p>
       <p>Découvrez des articles de toutes sortes <strong>livres e-books, chaussures, accesoires, phones, habillements...</strong><br><a style="color:green;"><strong>Gratuits</strong></a> & <a style="color: rgb(0, 0, 255);"><strong>Payants</strong></a>
  </p>
